--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -45,11 +45,11 @@
                     <ul class="login nav">
                         <!-- dropdown -->
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle link-light" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="margin-right:10px;">
+                            <a class="nav-link dropdown-toggle link-light" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" style="margin-right:20px;">
                                 <%= currentUser.name %> 님
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-		                        <a href="<%=`/bookmark/${currentUser.getDataValue('id')}`%>" class="dropdown-item">북마크</a>
+		                        <a href="/bookmark" class="dropdown-item">북마크</a>
                                 <a href="<%=`/post/${currentUser.getDataValue('id')}`%>" class="dropdown-item">내 글</a>
 		                        <a href="<%=`/users/${currentUser.getDataValue('id')}`%>" class="dropdown-item">정보 수정</a>
                                 <a href="/users/logout" class="dropdown-item">로그아웃</a>
