--- a/views/bookmark.ejs
+++ b/views/bookmark.ejs
@@ -32,7 +32,7 @@
 
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                     <% if (bookmarks.length == 0) { %>
-                        <div class="center">
+                        <div style="align-items: center;">
                             <h1>설정한 북마크가 없습니다.</h1>
                         </div>
                     <% } %>
