--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -65,6 +65,19 @@
                 </div>
 
             </div>
+            <div class = "flashes">
+                <% if (flashMessages) { %>
+                  <% if (flashMessages.success) { %>
+                    <div class = "flash success">
+                      <%= flashMesssges.success %>
+                    </div>
+                  <% } else if (flashMessages.error) { %>
+                    <div class = "flash error">
+                      <%= flashMessages.error %>
+                    </div>
+                  <% } %>
+                <% } %>
+              </div>
         </nav>
     </header>
     <%- body %>
