--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -84,7 +84,7 @@
                                                 </form>
                                             <% } else { %>
                                                 <form>
-                                                    <input id="<%= m.number %>" class="btn fa-input align-items-end" value="&#xf004" />
+                                                    <input id="<%= m.number %>" class="btn fa-input" value="&#xf004" />
                                                 </form>
                                             <% } %>
                                         <% } else { %> 
