--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -50,7 +50,7 @@
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 		                        <a href="/bookmark" class="dropdown-item">북마크</a>
-                                <a href="<%=`/post/${currentUser.getDataValue('id')}`%>" class="dropdown-item">내 글</a>
+                                <a href="/delPost" class="dropdown-item">내 글</a>
 		                        <a href="<%=`/users/${currentUser.getDataValue('id')}/edit`%>" class="dropdown-item">정보 수정</a>
                                 <a href="/users/logout" class="dropdown-item">로그아웃</a>
                             </div>
