--- a/views/index.ejs
+++ b/views/index.ejs
@@ -124,7 +124,7 @@
                             <a href="/mountain">
                                 <img src="/images/mountain.png" width=100px>
                                 <hr />
-                                <h2 class="card-title display-1" style="font-size:3.0vmin;">산</h2>
+                                <h2 class="card-title display-1 text-decoration-none" style="font-size:3.0vmin;">산</h2>
                             </a>
                         </div>
                     </div>
@@ -136,7 +136,7 @@
                             <a href="/around">
                                 <img src="/images/gyeongbokgung-palace.png" width=100px>
                                 <hr />
-                                <h2 class="card-title display-1" style="font-size:3.0vmin;">주변정보</h2>
+                                <h2 class="card-title display-1 text-decoration-none" style="font-size:3.0vmin;">주변정보</h2>
                             </a>
                         </div>
                     </div>
@@ -147,7 +147,7 @@
                             <a href="/posts">
                                 <img src="/images/community.png" width=100px>
                                 <hr />
-                                <h2 class="card-title display-1" style="font-size:3.0vmin;">커뮤니티</h2>
+                                <h2 class="card-title display-1 text-decoration-none" style="font-size:3.0vmin;">커뮤니티</h2>
                             </a>
                         </div>
                     </div>
