--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -83,8 +83,8 @@
                                                     <input type="submit" id="<%= m.number %>" class="btn fa-input" value="&#xf004" />
                                                 </form>
                                             <% } else { %>
-                                                <form>
-                                                    <input id="<%= m.number %>" class="btn fa-input" value="&#xf004" style="width: 16px;" />
+                                                <form style="padding: 0; margin: 0;">
+                                                    <input id="<%= m.number %>" class="btn fa-input" value="&#xf004" style="margin: 0;" />
                                                 </form>
                                             <% } %>
                                         <% } else { %> 
