--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -84,7 +84,7 @@
                                                 </form>
                                             <% } else { %>
                                                 <form style="padding: 0; margin: 0;">
-                                                    <input id="<%= m.number %>" class="btn fa-input" value="&#xf004" style="margin: 0;" />
+                                                    <input id="<%= m.number %>" class="btn fa-input" value="&#xf004" style="-webkit-appearance: button;" />
                                                 </form>
                                             <% } %>
                                         <% } else { %> 
