--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -83,8 +83,8 @@
                                                     <input type="submit" id="<%= m.number %>" class="btn fa-input" value="&#xf004" />
                                                 </form>
                                             <% } else { %>
-                                                <form style="padding: 0; margin: 0;">
-                                                    <input id="<%= m.number %>" class="btn fa-input" value="&#xf004" style="-webkit-appearance: button;" />
+                                                <form action="/mountain" method="get">
+                                                    <input type="submit" id="<%= m.number %>" class="btn fa-input" value="&#xf004" style="width: 20px;" />
                                                 </form>
                                             <% } %>
                                         <% } else { %> 
