--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -83,8 +83,8 @@
                                                     <input type="submit" id="<%= m.number %>" class="btn fa-input" value="&#xf004" />
                                                 </form>
                                             <% } else { %>
-                                                <form action="/mountain" method="get">
-                                                    <input type="submit" id="<%= m.number %>" class="btn fa-input" value="&#xf004" style="width: 35px;" />
+                                                <form action="#" method="get">
+                                                    <input type="submit" id="<%= m.number %>" class="btn fa-input" value="&#xf004" style="width: 40px;" />
                                                 </form>
                                             <% } %>
                                         <% } else { %> 
