--- a/views/mountain.ejs
+++ b/views/mountain.ejs
@@ -83,7 +83,7 @@
                                                     <input type="submit" id="<%= m.number %>" class="btn fa-input" value="&#xf004" />
                                                 </form>
                                             <% } else { %>
-                                                <form action="#" method="get">
+                                                <form action="/" method="get">
                                                     <input type="submit" id="<%= m.number %>" class="btn fa-input" value="&#xf004" style="width: 40px;" />
                                                 </form>
                                             <% } %>
