--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,7 +20,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-green">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-green fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">SANTAS</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample03" aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation" data-target="#collapsibleNavbar">
