--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -7,13 +7,13 @@
             <div class="form-group row">
                 <label for="id" class="col-sm-3 col-form-label">ID</label>
                 <div class="col-sm-9">
-                    <input type="text" id="id" name="id" value="<%= user.id %>" class="form-control">
+                    <input type="text" id="id" name="id" value="<%= user.id %>" class="form-control" readonly>
                 </div>
             </div>
             <div class="form-group row">
                 <label for="name" class="col-sm-3 col-form-label">Password</label>
                 <div class="col-sm-9">
-                    <input type="password" id="password" name="password" value="<%= user.password %>" class="form-control">
+                    <input type="password" id="password" name="password" class="form-control">
                 </div>
             </div>
             <div class="form-group row">
