--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -78,6 +78,7 @@
               <% } %>
             <% } %>
         </div>
+        <div style="padding: 10px;"></div>
     </header>
 
     <%- body %>
