--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -65,6 +65,7 @@
                 </div>
             </div>
         </nav>
+        <div style="padding: 20 20 0 0;"></div>
         <div class = "flashes">
             <% if (flashMessages) { %>
               <% if (flashMessages.success) { %>
@@ -78,7 +79,6 @@
               <% } %>
             <% } %>
         </div>
-        <div style="padding: 10px;"></div>
     </header>
 
     <%- body %>
