--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -65,7 +65,7 @@
                 </div>
             </div>
         </nav>
-        <div style="padding: 20 20 0 0;"></div>
+        <div style="padding: 20px;"></div>
         <div class = "flashes">
             <% if (flashMessages) { %>
               <% if (flashMessages.success) { %>
