--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -66,7 +66,7 @@
             </div>
         </nav>
         <div style="padding: 35px;"></div>
-        <div class = "flashes">
+        <div class = "flashes fixed-top">
             <% if (flashMessages) { %>
               <% if (flashMessages.success) { %>
                 <div class = "flash success">
