--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,6 +20,7 @@
 
 <body>
     <header>
+        <div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-green fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" href="/">SANTAS</a>
@@ -78,6 +79,7 @@
                 </div>
               <% } %>
             <% } %>
+        </div>
         </div>
     </header>
 
