--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -13,7 +13,7 @@
             <div class="form-group row">
                 <label for="name" class="col-sm-3 col-form-label">Password</label>
                 <div class="col-sm-9">
-                    <input type="password" id="password" name="password" value="<%= user.password %>" class="form-control">
+                    <input type="password" id="password" name="password" value="" class="form-control">
                 </div>
             </div>
             <div class="form-group row">
