--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -14,9 +14,9 @@
 </div>
 
 
-<!---
+
   <div class="container-fluid">
-          <% if (comments.length != 0) { %>
+          <% if (comments.isArray != 0) { %>
           <% comments.forEach(comment=> { %> 
             
               <div class="row">
@@ -49,4 +49,4 @@
 
     </form>
   </div>
--->
+
