--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -16,7 +16,7 @@
 
 
   <div class="container-fluid">
-          <% if (comments.isArray != 0) { %>
+          <% if (comments.isArray) { %>
           <% comments.forEach(comment=> { %> 
             
               <div class="row">
