--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -40,7 +40,7 @@
 
       <div class="form-group">
         <label for="commentDetail">Comment</label>
-        <textarea id="commetDetail" name="commetDetail" class="form-control" placeholder="commetDetail"></textarea>
+        <textarea id="commetDetail" name="commentDetail" class="form-control" placeholder="commetDetail"></textarea>
       </div>
 
       <div>
