--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -35,6 +35,7 @@
         </div>
 
 
+<% if (loggedIn) { %>
   <div class="data-form">
     <form class="form-post" action="<%=`/comments/${post.id}/create`%>" method="post">
 
@@ -49,4 +50,5 @@
 
     </form>
   </div>
+<% } %>
 
