--- a/views/delPost.ejs
+++ b/views/delPost.ejs
@@ -29,7 +29,7 @@
               <tr>
                 <th scope="row">
                 </th>
-                <td><%= p.id %></td>
+                <td><a href="<%= `/posts/${p.id}` %>"><%= p.id %></a></td>
                 <td><%= p.title %></td>
                 <td><%= p.user.nickname %></td>
                 <td><%= p.createdAt %></td>
