--- a/views/delPost.ejs
+++ b/views/delPost.ejs
@@ -29,8 +29,8 @@
               <tr>
                 <th scope="row">
                 </th>
-                <td><a href="<%= `/posts/${p.id}` %>"><%= p.id %></a></td>
-                <td><%= p.title %></td>
+                <td><%= p.id %>/td>
+                <td><a href="<%= `/posts/${p.id}` %>"><%= p.title %></a></td>
                 <td><%= p.user.nickname %></td>
                 <td><%= p.createdAt %></td>
               </tr>
