--- a/views/posts/show.ejs
+++ b/views/posts/show.ejs
@@ -16,23 +16,45 @@
 
 
   <div class="container-fluid">
-          <% if (comments.length != 0) { %>
+	<table class="table table-striped" id="tb">
+	<thead>
+	<tr>
+	
+        <th scope="col">Comment</th>
+        <th scope="col">Date</th>
+        <th scope="col">Edit</th>
+        <th scope="col">Delete</th>
+        </tr>
+    	</thead>
+	<tbody>
+          
           <% comments.forEach(comment=> { %> 
-            
-              <div class="row">
-               <div class="col-3 col-md-2 col-lg-1 pl-4"><%= comment.commentNum %></div> 
-                <div class="col-9 col-md-10 col-lg-11">
-                  <div class="comment-show">
-                    <div class="comment-text mb-3"><%= comment.commentDetail %></div>
-                    <small class="d-block">
-                      (Created: <span data-date-time="<%= comment.createdAt %>"></span>) 
-                    </small>
-                  </div>
-                </div>
-              </div>
-            
-          <% })} %>
-        </div>
+            <tr>
+               <td>
+		<%= comment.commentDetail %>
+	       </td>
+               <td>
+                <%= comment.createdAt %>
+               </td>
+	        <td>
+          	<a class="btn btn-outline-success" href="<%=`/comments/${comment.commentNum}/edit`%>"> Edit  </a>
+                </td>
+
+ <td>
+ <% if (loggedIn && comment.userId == currentUser.id)  { %>
+          <form action="/comments/<%=comment.commentNum%>/delete" method="post"> 
+            <input type="submit" name="Delete" value="Delete" class="btn btn-outline-success"
+              onClick="alert('Are yout sure you want to delete this record?')">
+          </form>
+<% } %>
+        </td>
+             </tr>            
+
+          <% }) %>
+	</tbody>
+</table>
+
+
 
 
 <% if (loggedIn) { %>
