--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -39,6 +39,13 @@
                 <button type="submit" class="btn btn-outline-success">Save</button>
             </div>
         </form>
-
+<!--for test-->
+        <form action="<%=`/users/${user.id}/delete`%>" method="post">
+            <input type="submit" name="Delete" value="Delete Account" class="btn btn-outline-success"
+              onClick="alert('Are yout sure you want to delete your account?')">
+          </form>
+<!--for test-->
     </div>
+
+
 </div>
